chore: updated example app to Flutter 3.27

--- a/example/web/index.html
+++ b/example/web/index.html
@@ -21,7 +21,7 @@
   <meta name="description" content="Demonstrates how to use the firebase_pagination package.">
 
   <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="firebase_pagination_example">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
